fix overflow on style

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -111,9 +111,7 @@
 
 
 
-.x-button {
-    
-}
+
 
 @media screen and (max-width: 1050px) {
     .col-wrapper1 {
